--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,10 +9,10 @@
 <ion-content padding>
   <ion-list>
     <ion-item>
-      <ion-input placeholder="Username" type="email" autocomplete="on"></ion-input>
+      <ion-input placeholder="Username" type="email"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input placeholder="Password" type="password" autocomplete="on"></ion-input>
+      <ion-input placeholder="Password" type="password"></ion-input>
     </ion-item>
   </ion-list>
 </ion-content>
